<resources>
    <string name="app_name">CarencyApp</string>
    <string name="eur">EUR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usd">USD</string>
    <string name="bng">BNG</string>
    <string name="myBalance">myBalance</string>
    <string name="exchange">currencyExchange</string>
    <string name="submit">submit</string>
</resources>